# easybfe

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
doc/: Makefile  README.md  conf.py  index.rst
doc/api/: easybfe.rst  index.rst
docs/: cli.md  topics.md
easybfe/: __init__.py  cli.py  cmd.py  logging.py  parallel.py
easybfe/abfe/: __init__.py  cli.py  config.py  piepline.py
easybfe/amber/: __init__.py  boresch.py  em.in  heat.in  op.py  plain_md.py  prep.py  prep_ligand_abfe.py  prep_ligand_rbfe.py  prep_plain_md.py  prep_protein_fep.py  prep_utils.py  pres.in  prod.in  project.py  run.sh.template  select_rep.py  settings.py  submit.slurm  workflow.py
easybfe/analysis/: __init__.py  abfe.py  boresch.py  interaction.py  interaction_plip.py  mbar.py  mle.py  plain_md.py  plot.py  rbfe.py  trajectory.py
examples/: config_5ns.json  ejm_44.sdf  ejm_52.sdf  jmc_31.sdf  jmc_32_neu.sdf
tests/: config_plain_md.json  e2e_abfe_config.yaml  test_amber_rbfe.py  test_analysis_boresch.py  test_block_average.py  test_boresch.py  test_cli_abfe.py  test_cli_ligand.py  test_cli_protein.py  test_config.py  test_decorrelate_u_nks.py  test_docking.py  test_embed.py  test_gbsa.py  test_geometry.py  test_interaction_analysis.py  test_ligand.py  test_ligand_abfe.py  test_ligand_rbfe.py  test_mapping.py  test_network.py  test_openmm_water.py  test_openmm_xml.py  test_plain_md.py  test_plot_convergence.py  test_protein_fep.py  test_proteinfixer.py  test_resp.py  test_select_rep.py  test_smff.py  test_trajectory_water.py  test_workflow.py
(+139 files in other folders)
